--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "phlaunt-web-01",
   "version": "0.1.0",
+  "homepage": "https://anandchakru.github.io/phlaunt-web-01",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
