--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Build project
       run: npm run build
     
+    - name: Copy for 404
+      run: cp ./public/index.html ./public/404.html
+
     - name: Run tests
       run: echo -e "npm run test"
 
